hphp/hack/test/typecheck/expression_trees/static_static_method_call.php.exp
ERROR: File "static_static_method_call.php", line 11, characters 28-45:
Static method calls in expression trees require explicit class names. (Parsing[1002])
ERROR: File "static_static_method_call.php", line 11, characters 28-45:
Invalid return type (Typing[4110])
  File "expr_tree.php", line 86, characters 21-26:
  Expected `string`
  File "expr_tree.php", line 99, characters 28-43:
    resulting from expanding the type constant `ExampleDsl::TAst`
  File "static_static_method_call.php", line 8, characters 6-72:
  But got `Awaitable<ExampleExpression<(function(string): int)>>`
ERROR: File "static_static_method_call.php", line 11, characters 40-44:
Invalid argument (Typing[4110])
  File "static_static_method_call.php", line 7, characters 5-18:
  Expected `ExampleContext`
  File "static_static_method_call.php", line 11, characters 40-44:
  But got `string`
